--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,14 @@
 server.port=8080
 
 #BAZA
-spring.datasource.url=jdbc:h2:~/test:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:~/test:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:h2-console
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql = true
+
 
 #H2 POSTAVKE
 spring.h2.console.enabled=true
